# OptiX

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  project.uml  pyproject.toml
docs/: .gitignore  Makefile  README.md  README.rst  architecture.rst  build_docs.py  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  make.bat  overview.rst  oxconstraintset.md  quickstart.rst  requirements.txt  usage.rst
docs/_static/css/: custom.css  optix_theme.css
docs/_static/js/: custom.js
docs/source/: changelog.rst  conf.py  index.rst  installation.rst  license.rst  quickstart.rst
docs/source/api/: analysis.rst  constraints.rst  data.rst  problem.rst  solvers.rst  utilities.rst  variables.rst
docs/source/examples/: bus_assignment.rst  diet_problem.rst  index.rst
docs/source/tutorials/: linear_programming.rst
docs/source/user_guide/: problem_types.rst
samples/bus_assignment_problem/: 01_simple_bus_assignment_problem.py  02_simple_bus_assignment_problem.py  03_bus_assignment_problem.py
samples/diet_problem/: 01_diet_problem.py
src/analysis/: OXObjectiveFunctionAnalysis.py  OXRightHandSideAnalysis.py  __init__.py
src/base/: OXObject.py  OXObjectPot.py  OXception.py  __init__.py
src/constraints/: OXConstraint.py  OXConstraintSet.py  OXSpecialConstraints.py  OXpression.py  __init__.py
src/data/: OXData.py  OXDatabase.py  __init__.py
src/problem/: OXProblem.py  __init__.py
src/serialization/: __init__.py  serializers.py
src/solvers/: OXSolverFactory.py  OXSolverInterface.py  __init__.py
src/solvers/gurobi/: OXGurobiSolverInterface.py  __init__.py
src/utilities/: DynamicValue.py  __init__.py  class_loaders.py  fraction.py
src/variables/: OXDeviationVar.py  OXVariable.py  OXVariableSet.py  __init__.py
tests/: test_OXConstraint.py  test_OXData.py  test_OXObject.py  test_OXObjectPot.py  test_OXProblem.py  test_OXSpecialConstraints.py  test_OXVariable.py  test_OXVariableSet.py  test_OXception.py  test_OXpression.py  test_class_loaders.py  test_serializers.py
(+2 files in other folders)
