[project]
name = "optix"
version = "0.1.0"
description = ""
authors = [
    {name = "Tolga BERBER",email = "tolga.berber@fen.ktu.edu.tr"},
    {name = "Beyzanur SİYAH",email = "beyzanursiyah@ktu.edu.tr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)"
]

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-apidoc = "^0.4.0"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
