[project]
name = "optix"
version = "0.1.0"
description = ""
authors = [
    {name = "Tolga BERBER",email = "tolga.berber@fen.ktu.edu.tr"},
    {name = "Beyzanur SİYAH",email = "beyzanursiyah@ktu.edu.tr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "urllib3 (==2.4.0)",
    "sphinx (==8.3.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "sphinxcontrib-apidoc (>=0.5.0,<0.6.0)",
    "myst-parser (>=4.0.1,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
